# extrinsic_calibration

./: CMakeLists.txt  CMakeLists.txt.catkin  README.md  package.xml
include/extrinsic_calibration/: calibrator.h  calibrator_node.h  cvutils.h  laser_marker.h  marker_detector.h  utils.h
samples/: sample_1.pcd  sample_2.pcd
src/: calibrator.cpp  calibrator_node.cpp  laser_marker.cpp  marker_detector.cpp
test/: calibration_test.cpp  calibrator_pcl.cpp
